gcc/testsuite/algol68/compile/error-mode-stropping-3.a68
begin union (int,real) j;
      j := "joo" { dg-error "char.*union \\( *real *, *int *\\)" }
end
